# Set library name
set(LIBNAME DiKErnel.Integration)

# Set folder names
set(PUBLIC_FOLDER Public)
set(PUBLIC_DATA_FOLDER ${PUBLIC_FOLDER}/Data)
set(PUBLIC_DATA_OUTPUT_FOLDER ${PUBLIC_DATA_FOLDER}/Output)
set(PUBLIC_EXCEPTIONS_FOLDER ${PUBLIC_FOLDER}/Exceptions)
set(INTERNAL_DATA_FOLDER Internal/Data)
set(INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER ${INTERNAL_DATA_FOLDER}/AsphaltRevetmentWaveImpact)
set(INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER ${INTERNAL_DATA_FOLDER}/GrassRevetmentWaveImpact)
set(INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER ${INTERNAL_DATA_FOLDER}/GrassRevetmentWaveRunup)
set(INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER ${INTERNAL_DATA_FOLDER}/NaturalStoneRevetment)
set(INTERNAL_EXCEPTIONS_FOLDER Internal/Exceptions)
set(INTERNAL_FACTORIES_FOLDER Internal/Factories)
set(INTERNAL_HELPERS_FOLDER Internal/Helpers)

# Define sources
set(SOURCEFILES_PUBLIC
  ${PUBLIC_FOLDER}/RevetmentCalculationInputBuilder.cpp
  ${PUBLIC_FOLDER}/RevetmentCalculationInputBuilder.h
)

set(SOURCEFILES_PUBLIC_DATA
  ${PUBLIC_DATA_FOLDER}/AsphaltRevetmentTopLayerType.h
  ${PUBLIC_DATA_FOLDER}/AsphaltRevetmentWaveImpactLocationConstructionProperties.cpp
  ${PUBLIC_DATA_FOLDER}/AsphaltRevetmentWaveImpactLocationConstructionProperties.h
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentTopLayerType.h
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveImpactLocationConstructionProperties.cpp
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveImpactLocationConstructionProperties.h
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveRunupLocationConstructionProperties.cpp
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveRunupLocationConstructionProperties.h
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveRunupRayleighLocationConstructionProperties.cpp
  ${PUBLIC_DATA_FOLDER}/GrassRevetmentWaveRunupRayleighLocationConstructionProperties.h
  ${PUBLIC_DATA_FOLDER}/NaturalStoneRevetmentLocationConstructionProperties.cpp
  ${PUBLIC_DATA_FOLDER}/NaturalStoneRevetmentLocationConstructionProperties.h
  ${PUBLIC_DATA_FOLDER}/NaturalStoneRevetmentTopLayerType.h
  ${PUBLIC_DATA_FOLDER}/RevetmentLocationConstructionPropertiesBase.cpp
  ${PUBLIC_DATA_FOLDER}/RevetmentLocationConstructionPropertiesBase.h
)

set(SOURCEFILES_PUBLIC_DATA_OUTPUT
  ${PUBLIC_DATA_OUTPUT_FOLDER}/AsphaltRevetmentWaveImpactTimeDependentOutput.cpp
  ${PUBLIC_DATA_OUTPUT_FOLDER}/AsphaltRevetmentWaveImpactTimeDependentOutput.h
  ${PUBLIC_DATA_OUTPUT_FOLDER}/GrassRevetmentWaveImpactTimeDependentOutput.cpp
  ${PUBLIC_DATA_OUTPUT_FOLDER}/GrassRevetmentWaveImpactTimeDependentOutput.h
  ${PUBLIC_DATA_OUTPUT_FOLDER}/GrassRevetmentWaveRunupRayleighTimeDependentOutput.cpp
  ${PUBLIC_DATA_OUTPUT_FOLDER}/GrassRevetmentWaveRunupRayleighTimeDependentOutput.h
  ${PUBLIC_DATA_OUTPUT_FOLDER}/NaturalStoneRevetmentTimeDependentOutput.cpp
  ${PUBLIC_DATA_OUTPUT_FOLDER}/NaturalStoneRevetmentTimeDependentOutput.h
)

set(SOURCEFILES_PUBLIC_EXCEPTIONS
  ${PUBLIC_EXCEPTIONS_FOLDER}/RevetmentCalculationInputBuilderException.cpp
  ${PUBLIC_EXCEPTIONS_FOLDER}/RevetmentCalculationInputBuilderException.h  
)

set(SOURCEFILES_INTERNAL_DATA
  ${INTERNAL_DATA_FOLDER}/CalculationInput.cpp
  ${INTERNAL_DATA_FOLDER}/CalculationInput.h
  ${INTERNAL_DATA_FOLDER}/LocationDependentInput.cpp
  ${INTERNAL_DATA_FOLDER}/LocationDependentInput.h
  ${INTERNAL_DATA_FOLDER}/ProfileData.cpp
  ${INTERNAL_DATA_FOLDER}/ProfileData.h
  ${INTERNAL_DATA_FOLDER}/TimeDependentInput.cpp
  ${INTERNAL_DATA_FOLDER}/TimeDependentInput.h
)

set(SOURCEFILES_INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFatigue.cpp
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactFatigue.h
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactLayer.cpp
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactLayer.h
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactLocationDependentInput.cpp
  ${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactLocationDependentInput.h
)

set(SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactTimeLine.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactTimeLine.h
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactLocationDependentInput.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactLocationDependentInput.h
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactWaveAngleImpact.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactWaveAngleImpact.h
)

set(SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupLocationDependentInput.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupLocationDependentInput.h
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighLocationDependentInput.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighLocationDependentInput.h
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRepresentative2P.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRepresentative2P.h
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupWaveAngleImpact.cpp
  ${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupWaveAngleImpact.h
)

set(SOURCEFILES_INTERNAL_DATA_NATURAL_STONE_REVETMENT
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentDistanceMaximumWaveElevation.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentDistanceMaximumWaveElevation.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentHydraulicLoads.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentHydraulicLoads.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentLocationDependentInput.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentLocationDependentInput.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentLowerLimitLoading.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentLowerLimitLoading.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentNormativeWidthOfWaveImpact.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentNormativeWidthOfWaveImpact.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentSlope.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentSlope.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentUpperLimitLoading.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentUpperLimitLoading.h
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentWaveAngleImpact.cpp
  ${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentWaveAngleImpact.h
)

set(SOURCEFILES_INTERNAL_EXCEPTIONS
  ${INTERNAL_EXCEPTIONS_FOLDER}/DefaultsFactoryException.cpp
  ${INTERNAL_EXCEPTIONS_FOLDER}/DefaultsFactoryException.h
  ${INTERNAL_EXCEPTIONS_FOLDER}/InvalidCalculationDataException.cpp
  ${INTERNAL_EXCEPTIONS_FOLDER}/InvalidCalculationDataException.h
)

set(SOURCEFILES_INTERNAL_FACTORIES
  ${INTERNAL_FACTORIES_FOLDER}/AsphaltRevetmentWaveImpactDefaultsFactory.cpp
  ${INTERNAL_FACTORIES_FOLDER}/AsphaltRevetmentWaveImpactDefaultsFactory.h
  ${INTERNAL_FACTORIES_FOLDER}/GrassRevetmentWaveImpactDefaultsFactory.cpp
  ${INTERNAL_FACTORIES_FOLDER}/GrassRevetmentWaveImpactDefaultsFactory.h
  ${INTERNAL_FACTORIES_FOLDER}/GrassRevetmentWaveRunupDefaultsFactory.cpp
  ${INTERNAL_FACTORIES_FOLDER}/GrassRevetmentWaveRunupDefaultsFactory.h
  ${INTERNAL_FACTORIES_FOLDER}/NaturalStoneRevetmentDefaultsFactory.cpp
  ${INTERNAL_FACTORIES_FOLDER}/NaturalStoneRevetmentDefaultsFactory.h
)

set(SOURCEFILES_INTERNAL_HELPERS
  ${INTERNAL_HELPERS_FOLDER}/CharacteristicPointsHelper.cpp
  ${INTERNAL_HELPERS_FOLDER}/CharacteristicPointsHelper.h
  ${INTERNAL_HELPERS_FOLDER}/ValidationHelper.cpp
  ${INTERNAL_HELPERS_FOLDER}/ValidationHelper.h
)

# Add library
add_library(${LIBNAME} STATIC
  ${SOURCEFILES_PUBLIC}
  ${SOURCEFILES_PUBLIC_DATA}
  ${SOURCEFILES_PUBLIC_DATA_OUTPUT}
  ${SOURCEFILES_PUBLIC_EXCEPTIONS}
  ${SOURCEFILES_INTERNAL_DATA}
  ${SOURCEFILES_INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP}
  ${SOURCEFILES_INTERNAL_DATA_NATURAL_STONE_REVETMENT}
  ${SOURCEFILES_INTERNAL_EXCEPTIONS}
  ${SOURCEFILES_INTERNAL_FACTORIES}
  ${SOURCEFILES_INTERNAL_HELPERS}
)

# Configure folder structure
set_target_properties(${LIBNAME} PROPERTIES FOLDER Src)
source_group(${PUBLIC_FOLDER} FILES ${SOURCEFILES_PUBLIC})
source_group(${PUBLIC_DATA_FOLDER} FILES ${SOURCEFILES_PUBLIC_DATA})
source_group(${PUBLIC_DATA_OUTPUT_FOLDER} FILES ${SOURCEFILES_PUBLIC_DATA_OUTPUT})
source_group(${PUBLIC_EXCEPTIONS_FOLDER} FILES ${SOURCEFILES_PUBLIC_EXCEPTIONS})
source_group(${INTERNAL_DATA_FOLDER} FILES ${SOURCEFILES_INTERNAL_DATA})
source_group(${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT})
source_group(${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT})
source_group(${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER} FILES ${SOURCEFILES_INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP})
source_group(${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER} FILES ${SOURCEFILES_INTERNAL_DATA_NATURAL_STONE_REVETMENT})
source_group(${INTERNAL_EXCEPTIONS_FOLDER} FILES ${SOURCEFILES_INTERNAL_EXCEPTIONS})
source_group(${INTERNAL_FACTORIES_FOLDER} FILES ${SOURCEFILES_INTERNAL_FACTORIES})
source_group(${INTERNAL_HELPERS_FOLDER} FILES ${SOURCEFILES_INTERNAL_HELPERS})

# Expose header files
if (BUILD_WITH_TESTS)
  target_include_directories(${LIBNAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DATA_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DATA_OUTPUT_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_EXCEPTIONS_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_EXCEPTIONS_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_FACTORIES_FOLDER}
    ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_HELPERS_FOLDER}
  )
else()
  target_include_directories(${LIBNAME}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_FOLDER}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DATA_FOLDER}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DATA_OUTPUT_FOLDER}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_EXCEPTIONS_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_DATA_NATURAL_STONE_REVETMENT_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_EXCEPTIONS_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_FACTORIES_FOLDER}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${INTERNAL_HELPERS_FOLDER}
  )
endif()

# Link dependencies
target_link_libraries(${LIBNAME}
  DiKErnel.Core
  DiKErnel.DomainLibrary
  DiKErnel.FunctionLibrary
)